# swiftide-tutorial

./: Cargo.toml  README.md
indexing-and-querying-code/: Cargo.toml  compose.yml
indexing-and-querying-code/src/: main.rs
ragas/: .gitignore  Cargo.toml  notebook.ipynb  pyproject.toml  questions.json  ragas.json
ragas/src/: main.rs
src/: main.rs
