[package]
name = "ragas"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
swiftide = { features = [
  "qdrant",
  "redis",
  "openai",
  "tree-sitter",
], version = "0.11.1" }
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
qdrant-client = "1.11.1"
indoc = "2.0.5"

[features]
default = ["chunk", "metadata"]
chunk = []
metadata = []
