[package]
name = "ragas"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
swiftide = { features = [
  "qdrant",
  "redis",
  "openai",
  "tree-sitter",
], version = "0.12.0", path = "../../swiftide/swiftide" }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
qdrant-client = "1.11.1"
indoc = "2.0.5"
serde = "1.0"
serde_json = "1.0"

[features]
default = ["chunk", "metadata"]
chunk = []
metadata = []
